<resources>
    <string name="app_name">Bill Manager</string>
    <string name="action_settings">Settings</string>
    <string name="view_bills">View Bills</string>
    <string name="add_new_bill">Add New Bill</string>
    <string name="payee">Payee</string>
    <string name="due_date">Due Date</string>
    <string name="amount_due">Amount Due</string>
    <string name="bill_type">Bill Type</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="notes">Notes</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="unpaid_nothing_to_show">Add a bill to see it here</string>
    <string name="paid_nothing_to_show">Pay a bill to see it here</string>
    <string name="enter_new_bill_information">Enter New Bill Information:</string>
    <string name="company">Company</string>
    <string name="todo">TODO</string>

</resources>
